// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideDrawer gets dismissed 1`] = `
<div>
  <div
    className="assistant-drawer-title"
  >
    1. Title 1
  </div>
  <div
    className="assistant-drawer-message"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Message 1",
      }
    }
  />
  <div>
    <div>
      <Button
        disabled={false}
        onClick={[Function]}
      >
        Next
         →
      </Button>
      <Button
        disabled={false}
        onClick={[MockFunction]}
      >
        Dismiss
      </Button>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders next step 1`] = `
<div>
  <div
    className="assistant-drawer-title"
  >
    2. Title 2
  </div>
  <div
    className="assistant-drawer-message"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Message 2",
      }
    }
  />
  <div>
    <div>
      <p>
        Did you find this guide useful?
      </p>
      <Button
        disabled={false}
        onClick={[Function]}
      >
        Yes
           ✔
      </Button>
      <Button
        disabled={false}
        onClick={[Function]}
      >
        No
           ✖
      </Button>
    </div>
  </div>
</div>
`;
